Refatoração total do código